# TrueWalletCollider

./: .gitignore  CMakeLists.txt  INSTALL.bat  INSTALL_EVERYTHING.bat  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.bat  build_cuda.bat  rebuild_quick.bat  setup_forensics.bat
cuda/: aes256_cuda.cu  aes256_cuda.h
data/: ckeys.txt  commands.txt  mckeys.txt  pubkeys.txt
docs/: CUDA.md  DFIR_CATALOG.md  FORMAT.md  HIBERNATION_FORENSICS.md  QUICKSTART.md  RECOVERY_RESEARCH.md  USER_GUIDE.md
scripts/: fetch_file.ps1  gen_tool_catalog.py
src/: main.cpp
src/crack/: CrackEngine.cpp  CrackEngine.h
src/crypto/: crypto_wallet.cpp  crypto_wallet.h  ctaes.h  secp256k1_lite.cpp  secp256k1_lite.h
src/gui/: App.cpp  App.h  ClipboardWin32.cpp  ClipboardWin32.h  Theme.h
src/wallet/: Archaeology.cpp  Archaeology.h  BreakerRebuild.cpp  BreakerRebuild.h  CaseManager.cpp  CaseManager.h  CpuSimd.cpp  CpuSimd.h  DerivationPaths.h  DualVerify.cpp  DualVerify.h  Experiment.cpp  Experiment.h  ForensicTools.cpp  ForensicTools.h  ForensicVerify.cpp  ForensicVerify.h  HashcatExport.cpp  HashcatExport.h  NativePipelines.cpp  NativePipelines.h  OutsideBox.cpp  OutsideBox.h  Passphrase.cpp  Passphrase.h  PassphraseLab.cpp  PassphraseLab.h  Salvage.cpp  Salvage.h  ToolBridge.cpp  ToolBridge.h  ToolCatalog.cpp  ToolCatalog.h  ToolCatalogData.inc  TrueReweave.cpp  TrueReweave.h  WalletDat.cpp  WalletDat.h  WalletFormat.cpp  WalletFormat.h
